[tool.poetry]
name = "app-dio-v2"
version = "1.0.0"
description = "App para consumir a API do Twitter."
authors = ["Lindon1972 <johnsonmacedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pymongo = "^4.6.1"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
